# backend/src/platform/integrations/dto/complete-connection.dto.ts
@@ -1,0 +1,6 @@
+import { completeIntegrationConnectionSchema } from '@tasker/config';
+import { createZodDto } from 'nestjs-zod';
+
+export class CompleteIntegrationConnectionDto extends createZodDto(
+  completeIntegrationConnectionSchema,
+) {}
