# backend/src/platform/integrations/dto/start-connection.dto.ts
@@ -1,0 +1,4 @@
+import { startIntegrationConnectionSchema } from '@tasker/config';
+import { createZodDto } from 'nestjs-zod';
+
+export class StartIntegrationConnectionDto extends createZodDto(startIntegrationConnectionSchema) {}
