# backend/src/platform/integrations/github/dto/create-task-link.dto.ts
@@ -1,0 +1,4 @@
+import { createTaskLinkSchema } from '@tasker/config';
+import { createZodDto } from 'nestjs-zod';
+
+export class CreateTaskLinkDto extends createZodDto(createTaskLinkSchema) {}
